fix footer not showing mobile

--- a/themes/unya/sass/_footer.scss
+++ b/themes/unya/sass/_footer.scss
@@ -2,7 +2,6 @@
   min-width:320px;
   max-height:300px;
   position: relative;
-  display: none;
   align-content: stretch;
   background: $color__blue-medium;
   color: #FFF;
